k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsm-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fsm-app
  template:
    metadata:
      labels:
        app: fsm-app
    spec:
      containers:
        - name: nextjs-container
          image: ghcr.io/abdellah-get/fsm-docker:main
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m" # Demande un minimum de 10% d'un coeur CPU
              memory: "128Mi" # Demande 128 Mo de RAM
            limits:
              cpu: "250m" # Ne doit jamais dépasser 25% d'un coeur CPU
              memory: "256Mi" # Ne doit jamais dépasser 256 Mo de RAM

          # 🩺 2. Sonde de vivacité (L'application a-t-elle planté ?)
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15 # On attend 15s au démarrage avant de vérifier
            periodSeconds: 20 # On vérifie toutes les 20s

          # 🚦 3. Sonde de préparation (L'application est-elle prête à recevoir du trafic ?)
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
