k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fsm-app-service
spec:
  # C'est ici qu'on dit au Service vers quels Pods envoyer le trafic
  selector:
    app: fsm-app
  ports:
    - protocol: TCP
      port: 3000 # Le port exposé par le service
      targetPort: 3000 # Le port sur lequel ton application écoute
  type: ClusterIP
